GNOME Bugzilla – Bug 739417
Unable to receive files over bluetooth when enabling "Bluetooth sharing" for the first time
Last modified: 2014-10-30 22:18:24 UTC
I recently came into a problem where I would not be able to send files from my phone to the computer using the bluetooth if I was enabling the bluetooth sharing options for the first time, as the obexd daemon would not be running until I enabled + disabled the bluetooth sharing at least once. After that, obexd would keep running and further times enabling "Save received files to Downloads folder" in the bluetooth sharing options would work as expected, allowing me to send files to the computer
Created attachment 289690 [details] [review] Patch proposal The attached patch fixed the issue for us
Review of attachment 289690 [details] [review]: Looks good, but change the subject line of the commit message to have the "obex: " prefix.
Thanks for the review. I'll change that in the commit message right before landing