obex: Make sure obexd daemon is launched if needed when starting to watch it

This fixes a situation where files can't be sent to the computer (e.g.
from a phone) until you enable and then disable the bluetooth sharing
options at least once, as the shutting down will cause the obexd daemon
to run due to the UnregisterAgent D-Bus call in obex_agent_down().

https://bugzilla.gnome.org/show_bug.cgi?id=739417